--- a/mainpage.html
+++ b/mainpage.html
@@ -128,7 +128,7 @@
 
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
-            <img src="images/food4.jpg" width="100%" max-height="300" />
+            <img src="http://www.abc.net.au/news/image/4381548-3x4-700x933.jpg" width="100%" max-height="300" />
             <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
