--- a/mainpage.html
+++ b/mainpage.html
@@ -100,7 +100,7 @@
         <div class="col-lg-4 col-md-6 item">
           <div class="well">
             <img src="images/food2.jpg" width="100%" />
-            <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>Cafe </h4>
+            <h4><div data-lorem="1-2w" class="pull-left margin-right-10"></div>sdfgdsfgdsgkndfgkjno</h4>
             <p class="text-muted"><div data-lorem="15-22w"></div></p>
             <p>
               <button type="button" onClick="like('counter2',1)" class="btn btn-primary margin-right-10"><i class="fa fa-thumbs-up"></i></button>
